--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ Werkzeug==1.0.1
 MarkupSafe==1.1.1
 itsdangerous==1.1.0
 cachetools==4.1.0
+Flask-Cors==3.0.10
+Flask-RESTful==0.3.8
+Flask-SQLAlchemy==2.5.1
