--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "software-lab-project",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:80/",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
